Metriseis Conv Loop opt

--- a/Notes/6.9-ReLU-Pooling-onDevice.md
+++ b/Notes/6.9-ReLU-Pooling-onDevice.md
@@ -163,19 +163,19 @@ Total time:33.728764 seconds
 END!
 
 Accelerator Kernel Timing data
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_conv_layer  NVIDIA  devicenum=0
     time(us): 253
     42: data region reached 9 times
         42: data copyin transfers: 24
              device time(us): total=253 max=28 min=3 avg=10
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_conv  NVIDIA  devicenum=0
     time(us): 194
     53: data region reached 9 times
         53: data copyin transfers: 18
              device time(us): total=194 max=34 min=3 avg=10
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   pad_input  NVIDIA  devicenum=0
     time(us): 0
     61: compute region reached 150000 times
@@ -183,7 +183,7 @@ Accelerator Kernel Timing data
             grid: [960]  block: [128]
             elapsed time(us): total=1,961,060 max=58 min=11 avg=13
     61: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   conv_forward  NVIDIA  devicenum=0
     time(us): 0
     80: compute region reached 150000 times
@@ -191,13 +191,13 @@ Accelerator Kernel Timing data
             grid: [160-512]  block: [32x4]
             elapsed time(us): total=4,967,291 max=485 min=19 avg=33
     80: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_relu_layer  NVIDIA  devicenum=0
     time(us): 10
     131: data region reached 3 times
         131: data copyin transfers: 3
              device time(us): total=10 max=4 min=3 avg=3
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   relu_forward  NVIDIA  devicenum=0
     time(us): 0
     136: compute region reached 150000 times
@@ -205,17 +205,17 @@ Accelerator Kernel Timing data
             grid: [1280]  block: [128]
             elapsed time(us): total=1,876,551 max=422 min=11 avg=12
     136: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_relu  NVIDIA  devicenum=0
     time(us): 0
     148: data region reached 3 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_pool_layer  NVIDIA  devicenum=0
     time(us): 9
     176: data region reached 3 times
         176: data copyin transfers: 3
              device time(us): total=9 max=3 min=3 avg=3
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   pool_forward  NVIDIA  devicenum=0
     time(us): 0
     181: compute region reached 150000 times
@@ -223,17 +223,17 @@ Accelerator Kernel Timing data
             grid: [720]  block: [128]
             elapsed time(us): total=20,616,655 max=3,545 min=28 avg=137
     181: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_pool  NVIDIA  devicenum=0
     time(us): 0
     212: data region reached 3 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   load_conv  NVIDIA  devicenum=0
     time(us): 56
     307: update directive reached 3 times
         307: data copyin transfers: 6
              device time(us): total=56 max=22 min=3 avg=9
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/main.c
+../main.c
   main  NVIDIA  devicenum=0
     time(us): 549,202
     178: data region reached 4 times
@@ -645,19 +645,19 @@ Total time:15.035259 seconds
 END!
 
 Accelerator Kernel Timing data
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_conv_layer  NVIDIA  devicenum=0
     time(us): 261
     42: data region reached 9 times
         42: data copyin transfers: 24
              device time(us): total=261 max=40 min=3 avg=10
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_conv  NVIDIA  devicenum=0
     time(us): 213
     53: data region reached 9 times
         53: data copyin transfers: 18
              device time(us): total=213 max=42 min=3 avg=11
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   pad_input  NVIDIA  devicenum=0
     time(us): 0
     60: compute region reached 150000 times
@@ -665,7 +665,7 @@ Accelerator Kernel Timing data
             grid: [960]  block: [128]
             elapsed time(us): total=1,944,836 max=2,501 min=11 avg=12
     60: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   conv_forward  NVIDIA  devicenum=0
     time(us): 0
     80: compute region reached 150000 times
@@ -673,13 +673,13 @@ Accelerator Kernel Timing data
             grid: [160-512]  block: [32x4]
             elapsed time(us): total=4,937,698 max=3,155 min=19 avg=32
     80: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_relu_layer  NVIDIA  devicenum=0
     time(us): 9
     131: data region reached 3 times
         131: data copyin transfers: 3
              device time(us): total=9 max=3 min=3 avg=3
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   relu_forward  NVIDIA  devicenum=0
     time(us): 0
     136: compute region reached 150000 times
@@ -687,17 +687,17 @@ Accelerator Kernel Timing data
             grid: [1280]  block: [128]
             elapsed time(us): total=1,870,346 max=446 min=11 avg=12
     136: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_relu  NVIDIA  devicenum=0
     time(us): 0
     148: data region reached 3 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   make_pool_layer  NVIDIA  devicenum=0
     time(us): 11
     176: data region reached 3 times
         176: data copyin transfers: 3
              device time(us): total=11 max=4 min=3 avg=3
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   pool_forward  NVIDIA  devicenum=0
     time(us): 0
     181: compute region reached 150000 times
@@ -705,17 +705,17 @@ Accelerator Kernel Timing data
             grid: [80-256]  block: [32x4]
             elapsed time(us): total=2,034,016 max=335 min=11 avg=13
     181: data region reached 300000 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   free_pool  NVIDIA  devicenum=0
     time(us): 0
     213: data region reached 3 times
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/layers.c
+../layers.c
   load_conv  NVIDIA  devicenum=0
     time(us): 59
     308: update directive reached 3 times
         308: data copyin transfers: 6
              device time(us): total=59 max=24 min=3 avg=9
-/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-relu/main.c
+../main.c
   main  NVIDIA  devicenum=0
     time(us): 557,486
     178: data region reached 4 times
