--- a/Notes/6.5-Parallel-Constructs.md
+++ b/Notes/6.5-Parallel-Constructs.md
@@ -138,11 +138,11 @@ void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
             for (int f_j = 0; f_j < l->filter_width; f_j++) {
               for (int f_i = 0; f_i < l->filter_width; f_i++) {
                 int f_idx = f_i + (f_j * l->filter_width) + (c + m * l->in_depth) * (l->filter_width * l->filter_width); // Filter Index
-                int x_j = -l->padding + j * l->stride + f_j; // Input height index, increased by stride
-                int x_i = -l->padding + i * l->stride + f_i; // Input width index, increased by stride
+                int x_j = -l->padding + j * l->stride + f_j;
+                int x_i = -l->padding + i * l->stride + f_i;
                 // If in range of image, else zero
                 if (x_j >= 0 && x_i >= 0 && x_j < l->in_height && x_i < l->in_width) {
-                  int x_idx = c * l->in_height * l->in_width + x_j * l->in_width + x_i; // Input index
+                  int x_idx = c * l->in_height * l->in_width + x_j * l->in_width + x_i; 
                   sum += l->weights[f_idx] * X[x_idx];
                 } // if
 ```
