Parallel-*.md updates

--- a/Notes/6.5-Parallel-Constructs.md
+++ b/Notes/6.5-Parallel-Constructs.md
@@ -210,8 +210,174 @@ Free memory time:0.000066 seconds
 Total time:13.959275 seconds
 END!
 ```
+### Profiling
+#### nvprof
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (if) Code
+CNN for 1200 images
+==2845232== NVPROF is profiling process 2845232, command: ./cnn-cifar10-profile
+Loading input batch 1...
+Load Data time:0.023720 seconds
+Create Network time:0.000089 seconds
+Load Network Parameters time:0.007887 seconds
+Create Ouputs time:0.000129 seconds
+
+Net Forward total time:14.681312 seconds
+    Time for conv1: 4.718387 seconds
+    Time for relu1: 0.421346 seconds
+    Time for pool1: 0.052615 seconds
+    Time for conv2: 6.728862 seconds
+    Time for relu2: 0.216028 seconds
+    Time for pool2: 0.012650 seconds
+    Time for conv3: 2.083648 seconds
+    Time for relu3: 0.196053 seconds
+    Time for pool3: 0.061173 seconds
+    Time for fc: 0.189243 seconds
+    Time for softmax: 0.000705 seconds
+
+  Conv: 13.530897 seconds
+  ReLU: 0.833427 seconds
+  Pool: 0.126438 seconds
+  FC:   0.189243 seconds
+  Softmax: 0.000705 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000025 seconds
+Free memory time:0.000071 seconds
+Total time:14.713233 seconds
+END!
+==2845232== Profiling application: ./cnn-cifar10-profile
+==2845232== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:  100.00%  13.4528s      3600  3.7369ms  1.5465ms  6.2981ms  _8layers_c_conv_forward_57_gpu
+      API calls:   98.52%  13.4660s      7200  1.8703ms  1.2520us  6.3009ms  cuStreamSynchronize
+                    1.12%  153.29ms         1  153.29ms  153.29ms  153.29ms  cuDevicePrimaryCtxRetain
+                    0.16%  21.191ms      3600  5.8860us  4.7890us  54.593us  cuLaunchKernel
+                    0.15%  20.702ms         1  20.702ms  20.702ms  20.702ms  cuMemAllocManaged
+                    0.04%  5.4837ms         1  5.4837ms  5.4837ms  5.4837ms  cuMemAllocHost
+                    0.01%  823.05us      1208     681ns     239ns  16.066us  cuPointerGetAttributes
+                    0.01%  773.02us      3609     214ns     140ns  8.0240us  cuDeviceGetAttribute
+                    0.00%  277.71us         1  277.71us  277.71us  277.71us  cuModuleLoadDataEx
+                    0.00%  140.85us         1  140.85us  140.85us  140.85us  cuMemAlloc
+                    0.00%  14.285us         1  14.285us  14.285us  14.285us  cuModuleGetFunction
+                    0.00%  8.1100us         1  8.1100us  8.1100us  8.1100us  cuDeviceGetPCIBusId
+                    0.00%  2.7320us         3     910ns     186ns  1.6760us  cuCtxSetCurrent
+                    0.00%  1.4490us         2     724ns     397ns  1.0520us  cuDeviceTotalMem
+                    0.00%  1.0840us         3     361ns     158ns     740ns  cuDeviceGetCount
+                    0.00%     870ns         3     290ns     132ns     558ns  cuDriverGetVersion
+                    0.00%     551ns         2     275ns     137ns     414ns  cuDeviceGet
+                    0.00%     417ns         1     417ns     417ns     417ns  cuCtxGetCurrent
+                    0.00%     327ns         1     327ns     327ns     327ns  cuDeviceComputeCapability
+ OpenACC (excl):   99.54%  13.4632s      3600  3.7398ms  1.5489ms  6.3017ms  acc_wait@layers.c:57
+                    0.20%  27.533ms      3600  7.6480us  5.9470us  812.96us  acc_enqueue_launch@layers.c:57 (_8layers_c_conv_forward_57_gpu)
+                    0.08%  10.410ms      3600  2.8910us  2.0620us  108.49us  acc_enter_data@layers.c:55
+                    0.06%  8.6265ms      3600  2.3960us  1.9450us  20.366us  acc_wait@layers.c:55
+                    0.06%  8.4507ms      3600  2.3470us  1.8540us  775.58us  acc_compute_construct@layers.c:55
+                    0.05%  6.3747ms      3600  1.7700us  1.3080us  734.07us  acc_exit_data@layers.c:55
+                    0.00%  380.25us         1  380.25us  380.25us  380.25us  acc_device_init
+
+==2845232== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+   21147  12.921KB  4.0000KB  0.9961MB  266.8359MB  66.95208ms  Host To Device
+   27894  9.2744KB  4.0000KB  448.00KB  252.6563MB  48.85624ms  Device To Host
+    9360         -         -         -           -   1.341264s  Gpu page fault groups
+    7532  4.0000KB  4.0000KB  4.0000KB  29.42188MB           -  Memory thrashes
+Total CPU Page faults: 18331
+Total CPU thrashes: 7532
+```
+
+#### NV_ACC
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 1200 images
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Loading input batch 1...
+Load Data time:0.022533 seconds
+Create Network time:0.000058 seconds
+Load Network Parameters time:0.007963 seconds
+Create Ouputs time:0.000051 seconds
+
+Net Forward total time:13.936492 seconds
+    Time for conv1: 4.704981 seconds
+    Time for relu1: 0.168500 seconds
+    Time for pool1: 0.053346 seconds
+    Time for conv2: 6.698879 seconds
+    Time for relu2: 0.070914 seconds
+    Time for pool2: 0.015984 seconds
+    Time for conv3: 2.063116 seconds
+    Time for relu3: 0.066863 seconds
+    Time for pool3: 0.023816 seconds
+    Time for fc: 0.069167 seconds
+    Time for softmax: 0.000525 seconds
+
+  Conv: 13.466975 seconds
+  ReLU: 0.306276 seconds
+  Pool: 0.093146 seconds
+  FC:   0.069167 seconds
+  Softmax: 0.000525 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000022 seconds
+Free memory time:0.000086 seconds
+Total time:13.967204 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-1-if/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 0
+    55: compute region reached 3600 times
+        57: kernel launched 3600 times
+            grid: [1]  block: [128]
+            elapsed time(us): total=13,451,892 max=6,194 min=1,610 avg=3,736
+    55: data region reached 7200 times
+```
 
 ## Parallel Construct
+### code
+```
+54:   #pragma acc parallel loop 
+    for (int m = 0; m < l->out_depth; m++) {
+      #pragma acc loop independent
+      for (int j = 0; j < l->out_height; j++) {
+        #pragma acc loop independent
+        for (int i = 0; i < l->out_width; i++) {
+          int y_idx = i + (l->out_width * (j + m * l->out_height)); // Output index
+          // Calculate dot product of Weights*Input
+          float sum = 0.0f;
+          #pragma acc loop reduction(+:sum) //collapse(3) vector
+          for (int c = 0; c < l->in_depth; c++) {
+            for (int f_j = 0; f_j < l->filter_width; f_j++) {
+              for (int f_i = 0; f_i < l->filter_width; f_i++) {
+                ...
+```
+### Minfo
+```
+conv_forward:
+     50, Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+         55, #pragma acc loop gang /* blockIdx.x */
+         57, #pragma acc loop seq
+         59, #pragma acc loop seq
+         64, #pragma acc loop seq
+         65, #pragma acc loop seq
+         66, #pragma acc loop vector(128) /* threadIdx.x */
+             Generating reduction(+:sum)
+     50, Generating implicit copyin(l) [if not already present]
+         Generating implicit copy(Y[:]) [if not already present]
+         Generating implicit copyin(X[:]) [if not already present]
+     57, Loop is parallelizable
+     59, Loop is parallelizable
+     64, Loop is parallelizable
+     65, Loop is parallelizable
+     66, Loop is parallelizable
+     73, FMA (fused multiply-add) instruction(s) generated
+```
+### Execution
 
 #### 1200 images
 ```
